manifests/deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-blue-deployment
  labels:
    app: hello-blue
    status: blue
spec:
  replicas: 10
  selector:
    matchLabels:
      app: hello-blue
  template:
    metadata:
      labels:
        app: hello-blue
    spec:
      containers:
        - name: test
          image: testdockergin.azurecr.io/test:52
          ports:
            - containerPort: 8080
