manifests/deployment-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-green-deployment
  labels:
    app: hello-green
    status: green
spec:
  replicas: 10
  selector:
    matchLabels:
      app: hello-green
  template:
    metadata:
      labels:
        app: hello-green
    spec:
      containers:
        - name: test
          image: testdockergin.azurecr.io/test:48
          ports:
            - containerPort: 8080
