manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello-blue
    status: blue
  ports:
    - name: tcp
      protocol: TCP
      port: 80
      targetPort: 8080
