manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-canary
spec:
  ingressClassName: nginx
  rules:
    - host: "canary.test.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: service-blue
                port:
                  name: http
